samples/_failures_safe/1761610337_a84052_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5274b81.c: In function ‘main’:
./samples/SAFE/__tmp_f5274b81.c:177:9: error: expected expression at end of input
  177 |         fprintf(stderr,
      |         ^~~~~~~
./samples/SAFE/__tmp_f5274b81.c:177:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5274b81.c:177:9: error: expected declaration or statement at end of input
